--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "prepublish": "npm run build",
     "publish": "npm publish --access public"
   },
+
+  "publishConfig": {
+    "@crodrigos:registry": "https://npm.pkg.github.com"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/crodrigos/logger-ts.git"
