--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
 
   "publishConfig": {
-    "@crodrigos:registry": "https://npm.pkg.github.com"
+    "@crodrigos:registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
